# lstm-crf

./: Makefile  pyproject.toml
src/lstm_crf/: lstm_crf.py  main.py  model.py  transformer_crf.py  util.py
tests/: test_model.py
