[tool.poetry]
name = "lstm-crf"
version = "0.1.0"
description = ""
authors = ["Ben Lambert <blambert@gmail.com>"]
readme = "README.md"
packages = [{include = "lstm_crf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "~2.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.6"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
